# CardPass

Program_sequence/: .dockerignore  .gitignore  Anchor.toml  Cargo.toml  Dockerfile  README.md  backend-integration-plan.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
Program_sequence/config/: Anchor.toml  tsconfig.json
Program_sequence/docs/: README.md  idea_scenarios.md  program-deployment-status.md  test-execution-guide.md  user-flow-test-sequences.md
Program_sequence/programs/contact-gate/: Cargo.toml
Program_sequence/programs/contact-gate/src/: lib.rs
Program_sequence/programs/hiring-rewards/: Cargo.toml
Program_sequence/programs/hiring-rewards/src/: errors.rs  lib.rs
Program_sequence/programs/hiring-rewards/src/instructions/: create_pool.rs  deposit.rs  distribute.rs  mod.rs  referral.rs
Program_sequence/programs/hiring-rewards/src/state/: mod.rs  referral.rs  reward_pool.rs
Program_sequence/programs/job-application/: Cargo.toml
Program_sequence/programs/job-application/src/: errors.rs  events.rs  lib.rs
Program_sequence/programs/job-application/src/instructions/: application.rs  job.rs  mod.rs  referral.rs
Program_sequence/programs/job-application/src/state/: application.rs  job.rs  mod.rs
Program_sequence/programs/profile-manager/: Cargo.toml
Program_sequence/programs/profile-manager/src/: errors.rs  events.rs  lib.rs
Program_sequence/programs/profile-manager/src/instructions/: contact.rs  mod.rs  nft.rs  payment.rs  profile.rs  resume.rs
Program_sequence/programs/profile-manager/src/state/: profile.rs
Program_sequence/programs/resume-marketplace/: Cargo.toml
Program_sequence/programs/resume-marketplace/src/: errors.rs  events.rs  lib.rs
Program_sequence/programs/resume-marketplace/src/instructions/: list_resume.rs  mod.rs  purchase_resume.rs  verify_resume.rs
Program_sequence/programs/resume-marketplace/src/state/: mod.rs  resume_nft.rs
Program_sequence/tests/: phase2-test.ts  phase3-test.ts  scenarios-a-and-b-test.ts  user-flow-01-onboarding.ts  user-flow-02-contact-gate.ts  user-flow-03-hiring-bounty.ts  user-flow-05-integration.ts
backend-infra/: .env.local.example  .gitignore  Jenkinsfile  Makefile  README.md  requirements.txt
backend-infra/app/: config.py  db.py  dependencies.py  main.py
backend-infra/app/api/: __init__.py  applications.py  auth.py  bounties.py  webhooks.py
backend-infra/app/auth/: auth.py
backend-infra/app/models/: __init__.py  entities.py
backend-infra/app/schemas/: __init__.py  applications.py  auth.py  bounties.py
backend-infra/app/services/: accounts.py  bootstrap.py  helius.py  solana.py  storage.py
backend-infra/migrations/: env.py
backend-infra/tests/: test_endpoints.py
cardpass-be/: README.md  alembic.ini  pyproject.toml
cardpass-be/alembic/: env.py
cardpass-be/alembic/versions/: 202403251200_initial_schema.py
cardpass-be/cardpass/: __main__.py  main.py
cardpass-be/cardpass/api/routers/: __init__.py  applications.py  auth.py  bounties.py  health.py  jobs.py  me.py  webhooks.py
cardpass-be/cardpass/config/: settings.py
cardpass-be/cardpass/core/: rate_limit.py  security.py
cardpass-be/cardpass/db/: __init__.py  session.py
cardpass-be/cardpass/models/: __init__.py  base.py  user.py
cardpass-be/cardpass/schemas/: application.py  auth.py  bounty.py  common.py  job.py  user.py  webhook.py
cardpass-be/cardpass/services/: applications.py  auth.py  bounties.py  jobs.py  profiles.py  webhooks.py
cardpass-be/cardpass/utils/: solana.py
cardpass-web/: .env.example  .env.local.example  CLAUDE.md  Makefile  README.md  app.config.ts  package.json  pnpm-lock.yaml
cardpass-web/src/: app.tsx  entry-client.tsx
cardpass-web/src/contexts/: i18n.tsx
(+31 files in other folders)
