[package]
name = "contact-gate"
version = "0.1.0"
description = "Value-based contact system with USDC payments"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "contact_gate"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = "0.31.1"
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }