[package]
name = "profile-manager"
version = "0.1.0"
description = "Profile management with zk compress NFT digital cards"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "profile_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "anchor-spl/metadata"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { version = "0.31.1", features = ["metadata"] }
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }