[package]
name = "resume-marketplace"
version = "0.1.0"
description = "Marketplace for successful resume templates"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "resume_marketplace"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = "0.31.1"
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }